--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -1,6 +1,11 @@
+:host {
+    --background-image-url: 'default.jpg';
+}
 .body{
-    margin: 1%;
-    padding: 1%;
+    margin-left: -0.75rem;
+    margin-top: -0.75rem;
+    width: calc(100% + 1.5rem);
+    height: calc(100% + 1.5rem);
 }
 
 .tabSection{
@@ -30,80 +35,108 @@ iframe{
 }
 
 
-section {
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-     */
+.section {
+
      display: flex;
      justify-content: center;
      align-items: center;
      background: #00000047;
+
+
+     position: absolute;
+     top: 0px;
+     left: 0px;
+     margin-left: -0.75rem;
+     /* margin-top: -0.75rem; */
+     z-index: 9999;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     background: rgba(0, 0, 0, 0.323);
+     backdrop-filter: blur(3px);
+
+     width: calc(100% + 1.5rem);
+     height: calc(100% + 1.5rem);
 }
 
-section .main{
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
+.section .main{
+    display: block;
+    border-radius: 6px;
     text-align: center;
-    width: 50%;
-    height:67%;
-    /* height: fit-content; */
-    background-color: white;
+    width: 55rem;
+    height:35rem;
+    background-color: white;    
     background-image: var(--background-image-url);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative;
-    gap: 1rem;
 }
 
 
 .firstRow{
     width: 100%;
+    height:10%;
     display: flex;
-    flex-direction: row;
 }
 .title{
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
     width: 40%;
-    font-size: 1.625rem;
+    font-size: 26px;
     text-align: start;
     font-weight: 700;
-    position: absolute;
-    top: 1.125rem;
-    left: 1.25rem;
     color: #00AEFF;
     float: left;
-
+    margin: 2%;
 }
 
 .profile{
-    width:25%;
-    border-radius: 0.5rem;
-    float: right;
+    width:30%;
+    border-radius: 6px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 4px 0px #00000040;
-    float: right;
-    position: absolute;
-    top: 1.125rem;
-    right: 1.25rem;
-    height: 6%;
+    height: 100%;
+    margin-top: 1%;
+    margin-left:25%;
     display: flex;
     flex-direction: row;
-    gap: 1%;
-    padding: 4px;
 }
 
 .userData{
     
+   margin-right: 1%;
     height: 100%;
     width: 90%;
-    font-size: 65%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+
+
+}
+.username{
+  
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 50%;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
-    /* border: 1px solid black;
-    border-radius: 0.2rem; */
-
+    font-size: 12px;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    justify-content: flex-end;
+    font-weight: bold;
+}
+.email{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 50%;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 12px;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    justify-content: flex-end;
 }
 .profileIcon{
     height:100%;
@@ -111,67 +144,78 @@ section .main{
     margin-inline: 2%;
 }
 
+
 .secondRow{
     display: flex;
     flex-direction: row;
-    height:5%;
-    margin-top: 3rem;
-    margin-left: 1rem;
+    height:6%;
+    width:100%;
+    margin-top:2%;
+    align-items: center;
 }
 .search{
     background: #FFFFFF;
     box-shadow: 0px 0px 25px 0px #00000033;
     font-family: Poppins;
-    font-size: 18px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 27px;
     text-align: left;
-    border-radius: 0.5rem;
+    border-radius: 6px;
     width:35%;
-    margin-top: 3rem;
-    margin-left: 1rem;
-    height:6%;
+    height:100%;
+    margin-left:1%;
+}
+.refresh-div{
+    height: 100%;
+    width:10%;
+    cursor: pointer;
+    border-radius: 6px;
+    margin-right: 1%;
+    margin-left: 53%;
+    box-shadow: 0px 0px 5px 0px #00000040;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .refresh{
-    height: 5%;
-    width: 5%;
-    position: absolute;
-    margin-right: 1rem;
-    left: 93%;
-    cursor: pointer;
-
+    width:90%;
 }
 
 input{
     border: none;
-    margin:1%;
+    height: 100%;
     width:80%;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    font:caption;
 }
 
 .searchIcon{
     margin: 1%;
-    height:50%;
+    height: 60%;
     width:10%;
 }
 
 .footer{
+    height: 8%;
+    margin-top: 1%;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    justify-self: baseline;
+    align-items: center;
 }
 .button{
     height:2rem;
     width:6rem;
-    border-radius: 0.3rem;
-    /* font-family: DM Sans; */
+    border-radius: 6px;
     font-size: 18px;
     font-weight: 700;
     line-height: 20px;
     text-align: center;
     cursor: pointer;
     padding-top: 0.6%;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
 }
 .cancel{
     margin-right: 0.5rem;
@@ -188,28 +232,28 @@ input{
 
 
 .documents{
-    width: 100;
-    height: 65%;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    
+    height:66%;
+    margin-left: 1%;
+    margin-right: 1%;
     border-radius: 0.5rem;
 
     display: grid;
+    justify-content: center;
+    align-items: start;
+    justify-items: center;
     grid-template-columns: repeat(4, 1fr);
     overflow-y: auto;
-    max-height: 65%;
-    gap: 1rem;
-
+    max-height: 75%;
+    gap: 1%;
+    margin-top: 1%;
+    padding-block-start: 0.5%;
 }
 .docs-container{
-    border-radius: 0.5 rem;
-    /* height:94%;
-    width:94%;     */
-    width:9.6rem;
-    height: 8rem;
-    margin: 0.5rem;
-    border-radius: 0.5rem;
-
+    border-radius: 6px;
+    
+    height: 11rem;
+    width:95%;    
     background: #FFFFFF;
     box-shadow: 0px 0px 5px 0px #00000040;
     cursor: pointer;
@@ -227,7 +271,7 @@ input{
     width:10%;
 }
 .docName{
-    font-family: Roboto;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
     font-size: 12px;
     font-weight: 500;
     line-height: 13.2px;
@@ -236,6 +280,8 @@ input{
     overflow:hidden;
     text-overflow: ellipsis;
     margin-left: 3%;
+    display: flex;
+    align-items: center;
 }
 
 .docSecondRow{
@@ -252,16 +298,16 @@ input{
 }
 
 .docThirdRow{
-    margin-top: 5%;
+    margin-top: 10%;
     margin-inline: 5%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     
 }
 .size{
-    /* float: left; */
-    font-family: Roboto;
-    font-size: 10px;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    font-size: 12px;
     font-weight: 400;
     line-height: 11px;
     text-align: left;
@@ -269,8 +315,8 @@ input{
 }
 .date{
     
-    font-family: Roboto;
-    font-size: 10px;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    font-size: 12px;
     font-weight: 400;
     line-height: 11px;
     text-align: left;
@@ -291,4 +337,49 @@ input:focus{
 
 .docs-container:hover{
     box-shadow: 1px 1px 5px 1px #00000040;
+}
+
+.emptySearch{
+    height:66%;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.emptyIcon{
+    height: 25%;
+    width:25%;
+}
+.empty-text{
+    width:100%;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+    font-size: xx-large;
+    margin-top: 1%;
+}
+.empty-text2{
+    font-size: medium;
+    margin-top: 1%;
+    width:100%;
+    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .section .main{
+      width:40rem;
+      height: 30rem;
+    }
+    .documents{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .docs-container{
+        height: 9.5rem;
+    }
+    .profile{
+        width: 40%;
+        margin-left: 15%;
+    }
 }
