--- a/force-app/main/default/lwc/editCSVTemplate/editCSVTemplate.css
+++ b/force-app/main/default/lwc/editCSVTemplate/editCSVTemplate.css
@@ -2,6 +2,10 @@ template{
     position: relative;
 }
 
+c-spinner{
+    z-index: 100000;
+}
+
 .main-div{
     position: absolute;
     top: 0%;
@@ -24,7 +28,7 @@ template{
     height: calc(100% - 5rem);
 }
 
-.header{
+/* .header{
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     height: 4rem;
@@ -37,11 +41,100 @@ template{
 .heading{
     font-size: 1.125rem;
     font-weight: 700;
+} */
+
+/* Tabs Section */
+
+.tabSection{
+    width: calc(100% + 2rem);
+    height: 2.5rem;
+    right: 1rem;
+    bottom: 1rem;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background: linear-gradient(269.86deg, rgb(173 229 255) 0%, rgb(174 255 233) 100%);
+    position: relative;
+    border-radius: 8px 8px 0 0;
 }
 
+.tabSection_sub{
+    width: fit-content;
+    /* background: white; */
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+    /* border-bottom: 1px solid #00aeff; */
+}
+.tabSection_sub:last-child{
+    flex-grow: 1;
+}
+.tab{
+    width: fit-content;
+    min-width: 7rem;
+    height: 100%;
+    padding: 0.25rem 1.5rem;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 600;
+    color: #595959;
+    border-bottom: 2px transparent solid;
+    cursor: pointer;
+    background: transparent;
+    transition: all linear 0.2s;
+    
+    &:hover{
+    color: black;
+    background: linear-gradient(0deg, #00aeff27 0%, transparent 117%);
+    border-bottom: 2px #00aeff8a solid;
+    }
+}
+.active-tab{
+    /* background: linear-gradient(0deg, #00aeff 3%, #00aeff3b 0%, transparent 117%) !important; */
+    border-bottom: 2px #00aeff solid !important;
+    color: black;
+    transition: all linear 0.2s;
+}
+.tab svg, .TemplateName svg{
+    width: 16px;
+    height: 16px;
+    fill: #595959;
+}
+
+.active-tab svg, .TemplateName svg{
+    fill: black;
+}
+.active-tab-bar{
+    width: 0%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    position: absolute;
+    /* background: linear-gradient(0deg, #00aeff 3%, #00aeff3b 0%, transparent 117%); */
+    background: linear-gradient(0deg, #00aeff 3%, rgb(0 174 255 / 17%) 0%, rgb(0 255 186 / 20%) 100%);
+    border-bottom: 1px solid #00aeff;
+    transition: all linear 0.2s;
+  }
+
+.TemplateName {
+    flex-grow: 1;
+    display: flex;
+    justify-content: end;
+    gap: 0.5rem;
+    align-items: center;
+    cursor: pointer;
+    padding-right: 1rem;
+}
+  
 .main-fields-div{
     width: 40%;
-    padding: 1.25rem;
+    padding: 0 1.25rem;
     height: calc( 100% - 2rem );
 }
 
@@ -61,7 +154,7 @@ template{
 
 .main-config-div{
     width: 60%;
-    height: calc( 100% - 5rem );
+    height: calc( 100% - 4rem );
     overflow-y: scroll;
 }
 
@@ -69,8 +162,9 @@ template{
     min-width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     height: 100%;
+    padding-top: 1rem;
 }
 
 .labels{
@@ -161,7 +255,9 @@ template{
 li{
     margin: 0.625rem;
     border-radius: 0.5rem;
-    padding: 0.625rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
     background-color: white;
     transition: all 0.1s ease-in-out;
@@ -180,11 +276,10 @@ li:hover{
 .buttons{
     display: flex;
     flex-direction: row;
-    /* margin-top: 0.625rem; */
     justify-content: center;
     gap: 0.5rem;
     padding: 0.813rem;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 }
 
 .column-buttons{
@@ -214,12 +309,13 @@ li:hover{
 
 .title-div{
     width: 100%;
-    background: #00aeff94;
+    background: #00AEFF;
     text-align: center;
     border-radius: 0.5rem;
     padding: 0.313rem;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 1.1rem;
+    color: white;
 }
 
 .btn-div{
@@ -265,6 +361,7 @@ button:hover{
 .add-btn{
     background-color: #e8e8e8;
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 .delete-btn:hover{
@@ -275,7 +372,7 @@ button:hover{
 }
 
 .filter-div, .sort-div, .limit-main-div, .filter-logic-div{
-    padding: 1.25rem 1.25rem 0 1.25rem;
+    padding: 0 1.25rem;
     width: 100%;
 }
 
@@ -361,15 +458,15 @@ button:hover{
 }
 
 .error-in-row{
-    background-color: #ff9d9d !important;
+    background-color: red !important;
 }
 
 .error-in-input{
-    --slds-c-input-color-border : #ff9d9d !important;
+    --slds-c-input-color-border : red !important;
 }
 
 .error-in-input:focus{
-    --slds-c-input-color-border : #ff9d9d !important;
+    --slds-c-input-color-border : red !important;
 }
 
 .sort-btn svg{
@@ -441,6 +538,97 @@ button:hover{
 }
 
 
+/* List View Popup */
+.section-div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.show-list-view-div{
+    width: 600px;
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 2rem;
+}
+
+.list-view-selection-div{
+    background: #c2e2ff9e;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin: 1rem 0;
+}
+
+.button-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+    gap: 3rem;
+}
+
+.list-view-button{
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    background-color: #00AEFF;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    border: none;
+    align-items: center;
+    color: white;
+    width: 50%;
+}
+
+.slds-backdrop_open{
+    z-index: 100;
+}
+
+
+/* Basic Details */
+
+.basic-main-div{
+    display: flex;
+    margin: 0.625rem auto;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.25rem;
+    background: #c2e2ff9e;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.edit-detail-div {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 0.5rem; 
+    column-gap: 1rem;
+    align-items: center;
+}
+
+
+.edit-detail-div .description-edit{
+    grid-column: 1 / span 2;
+}
+
+/* Custom Combobox Styling*/
+
+.custom-combobox{
+    --inputAreaBorderWidth: 0;
+    --inputAreaHeight : 2.5rem;
+    --inputAreaBorderRadius : 0.5rem;
+    --dropDownWidth : 10rem;
+}
+
+.error-in-custom-combobox{
+    --inputAreaBorderWidth: 1px;
+    --inputAreaBorderColor: red;
+}
+
+
 @media only screen and (min-width: 48rem) and (max-width: 64rem) {
     
 
@@ -458,5 +646,34 @@ button:hover{
 
     .save-button{
         font-size: 0.875rem;
+    }
+}
+
+
+@media only screen and (max-height:860px){
+    .fields-div{
+        justify-content: start;
+        padding-top: 0;
+    }
+
+    li{
+        height: 2rem;
+    }
+
+    .buttons{
+        margin-top: 0;
+    }
+
+    .selection-div{
+        height: 11.1rem  !important;
+    }
+
+    .selection-include-btn-div{
+        height: 11.1rem  !important;
+        margin-top:0;
+    }
+
+    .arrow-btn{
+        height: 2rem;
     }
 }
