--- a/force-app/main/default/lwc/integrationDashboard/integrationDashboard.css
+++ b/force-app/main/default/lwc/integrationDashboard/integrationDashboard.css
@@ -456,7 +456,7 @@ h2{
     height: 10px;
     background-color: rgba(228, 50, 50, 1);
     border-radius: 10px;
-    transition: background-color 0.5s ease-in-out;
+    /* transition: background-color 0.5s ease-in-out; */
 }
 
 .error-border {
@@ -471,7 +471,7 @@ h2{
     height: 10px;
     background-color: rgba(20, 173, 0, 1);
     border-radius: 10px;
-    transition: background-color 0.5s ease-in-out;
+    transition: background-color 0.2s ease-in-out;
 }
 
 .unauthorize{
