--- a/force-app/main/default/lwc/templatePreviewModal/templatePreviewModal.css
+++ b/force-app/main/default/lwc/templatePreviewModal/templatePreviewModal.css
@@ -105,6 +105,7 @@
 
 .iframe_outer{
     width: var(--pdfActualPreviewWidth);
+    /* width: 60rem; */
     height: 100%;
     overflow: hidden;
     position: relative;
@@ -112,9 +113,8 @@
 
 .preview_iframe{
     width: var(--pdfWidth);
+    /* width: 100%; */
     height: 100%;
-    /* height: calc(100% + 3.5rem); */
-    /* margin-top: -3.5rem; */
     float: right;
     border: none;
 }
