--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -9,16 +9,20 @@
 }
 
 .tabSection{
-    width:100%;
+    width:98%;
     height: 2rem;
     background-color: #FFFF;
-    border-radius: 1vh;
+    border-radius: 6px;
+    margin-inline: 1%;
+    margin-top: 0.5%;
 }
 
 iframe{
     height: 80vh;
     width:100%;
-    margin: 1%;
+    margin: 0.5%;
+    border-radius: 6px;
+
 }
 
 .main{
@@ -29,9 +33,9 @@ iframe{
 .fieldMappingContainer{
     background-color: #FFFF;
     width:30rem;
-    border-radius: 1vh;
-    margin: 1%;
-    padding: 1%;
+    border-radius: 6px;
+    margin: 0.5%;
+    height: 80vh;
 }
 
 
@@ -384,3 +388,18 @@ input:focus{
         margin-left: 15%;
     }
 }
+
+
+
+.desicionContainer{
+    margin-inline: 1rem;
+    margin-bottom: 0.5rem;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    border: 1px solid rgb(210, 208, 206);
+    border-radius: 6px;
+    background: white;
+  }
