--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -606,3 +606,13 @@ input:focus{
         fill: black;
       }
   
+
+
+.basicTab{
+  
+  height: calc(100% - 4rem);
+  margin: 1rem;
+  border-radius: 6px;
+  border: 1px solid rgb(210, 208, 206);
+  background-color:#FFFFFF;
+}
