--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -21,17 +21,10 @@
     padding-top: 0.5rem;
 }
 
-/* .tabSection{
-    width:98%;
-    height: 2rem;
-    background-color: #FFFF;
-    border-radius: 6px;
-    margin-inline: 1%;
-    margin-top: 0.5%;
-} */
+
 
 iframe{
-    /* height: 80vh; */
+    
 
     width:100%;
     margin: 0.5rem;
@@ -45,14 +38,16 @@ iframe{
     display: flex;
     width:100%;
     height: calc(100% - 2rem);
+    position: relative;
 }
 
 .fieldMappingContainer{
     background-color: #FFFF;
     width:30rem;
     border-radius: 6px;
-    margin: 0.5%;
-    /* height: 80vh; */
+    margin: 0.5rem;
+    height: calc(100% - 1rem);
+
 }
 
 
@@ -615,4 +610,5 @@ input:focus{
   border-radius: 6px;
   border: 1px solid rgb(210, 208, 206);
   background-color:#FFFFFF;
+  display: none;
 }
