--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -13,6 +13,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    overflow: hidden;
 }
 .sub_body{
     width: 100%;
