add google doc id in details

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -611,6 +611,7 @@ input:focus{
   /* border: 1px solid rgb(210, 208, 206); */
   /* border-radius: 6px; */
   display: none;
+  height: 100%;
 }
 
 .updateDeatilContainer{
@@ -623,12 +624,12 @@ input:focus{
   margin-top: 0.5rem;
 }
 
-.basicDetails{
+/* .basicDetails{
   flex-grow: 1;
   padding: 1rem;
   padding-top: 0rem;
   width: 100%;
-}
+} */
 
 
 .buttonSection{
@@ -651,4 +652,252 @@ input:focus{
   --slds-c-button-brand-color-border: var(--mainThemeColor);
   --slds-c-button-brand-color-background-hover: var(--mainThemeColor);
   --slds-c-button-brand-color-border-hover: var(--mainThemeColor);
+}
+
+.basicDetails{
+  
+  width:100%;
+  border-radius: 6px;
+  height: calc(100% - 4rem);
+ 
+  padding: 1rem;
+  padding-top: 0rem;
+}
+
+
+.basicDetails_sub{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #9ee0ff;
+  border-radius: 6px;
+  padding: 1rem;
+}
+
+/* ============ =============== DETAIl EDIT Section -- START -- ================= ================ */
+.templateDetails{
+  width: 100%;
+  min-width: 50%;
+  height: 100%;
+  padding-inline: 1rem;
+  border-right: 1px dashed black;
+  overflow: auto;
+}
+
+.detailHeader {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    color: rgb(46, 46, 46);
+    font-family: var(--fontFamily1);
+    margin-bottom: 0.5rem;
+}
+
+.detailEditSection {
+  --sds-c-input-shadow-focus : none !important;
+  --slds-c-textarea-shadow-focus : none !important;
+}
+
+.editName {
+    /* Add your styles here */
+}
+
+.editField {
+  width: 100%;
+  margin-block: 1rem;
+  position: relative;
+}
+
+.floatingLabel {
+  position: absolute;
+  top: 0%;
+  left: 1rem;
+  transform: translateY(-50%);
+  z-index: 10;
+  font-size: 13px;
+  background: white;
+  padding-inline: 0.25rem;
+  color: #009ae1;
+  font-family: var(--fontFamily1);
+}
+.fieldInput {
+  --lwc-heightInput: 2.5rem !important;
+  --slds-c-input-color-border: #878787 !important;
+  width: 100%;
+}
+
+.editDescription {
+  width: 100%;
+}
+
+.descriptionInput {
+  width: 100%;
+}
+
+.editStatus {
+    width: max-content;
+    margin-bottom: 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.statusLabel {
+  font-size: 13px;
+  color: #009ae1;
+  font-family: var(--fontFamily1);
+}
+
+    .tempToggle {
+      width: fit-content;
+      height: max-content;
+      position: relative;
+      overflow: hidden;
+    }
+    .toggleDiv{
+      width: 7rem;
+      height: 1.75rem;
+      padding: 0.25rem;
+      border-radius: 32px;
+      /* background-color: #FF310B; */
+      background-color: #adadad;
+      transition: 0.4s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+      cursor: pointer;
+    }
+    .toggleBtnBg{
+      height: 100%;
+      width: 100%;
+      position: relative;
+    }
+    .toggleBtnBg::before{
+      position: absolute;
+      top: 0px;
+      left: auto;
+      transform: translateX(0%);
+      right: 0% !important;
+      content: "";
+      height: 100%;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      background-color: #fff;
+      transition: 0.4s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+    }
+    .StatusText{
+      width: 200%;
+      height: 100%;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      transform: translateX(-50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.4s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+    }
+    .StatusText span{
+      width: 45%;
+      height: 100%;
+      color: white;
+      font-size: 14px;
+      display: flex;
+      justify-content: center;
+      font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
+      user-select: none;
+      line-height: 22px;
+      letter-spacing: 0.5px;
+    }
+    .checkBox:checked + label .toggleBtnBg::before{
+      transform: translateX(100%);
+      right: 100% !important;
+    }
+    .checkBox:checked + label .StatusText{
+      transform: translateX(0%);
+    }
+
+    .checkBox:checked + label .toggleDiv{
+      background-color: #14AD00;
+      background-color: #00aeff;
+    }
+
+.previewLabel{
+  font-size: 13px;
+  padding-inline: 0.25rem;
+  color: #009ae1;
+  font-family: var(--fontFamily1);
+}
+.nonEditInput{
+  width: 100%;
+  --lwc-heightInput: 2rem !important;
+  --slds-g-color-neutral-base-95 : #70707014;   /* disable field background-color  */ 
+  --slds-g-color-border-base-1 : #00000012;     /* disable field border-color  */ 
+  --slds-g-color-neutral-base-50 : #747474;     /* disable field Text-color  */ 
+}
+.previewTwise{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.previewField {
+    width: 100%;
+    position: relative;
+}
+
+ /* ============ =============== DETAIl EDIT Section -- END -- ================= ================ */
+ .msIcon svg > path.OfficeIconColors_HighContrast:not([class*="OfficeIconColors_m"]) {
+  fill: transparent;
+}
+svg>path.OfficeIconColors_m20 {
+  fill: #FAFAFAFF;
+}
+svg>path.OfficeIconColors_m22 {
+  fill: #3A3A38FF;
+}
+svg>path.OfficeIconColors_m24 {
+  fill: #1E8BCDFF;
+}
+
+.pageConfigs{
+width: 50%;
+min-width: 50%;
+height: 100%;
+font-family: var(--fontFamily1);
+padding-left: 1rem;
+overflow: auto;
+
+}
+.pageConfig_sub{
+display: flex;
+flex-direction: column;
+gap: 1rem;
+height: calc(100% - 2rem);
+}
+
+.dummyPageContainer{
+  width: auto;
+  height: 100%;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dummyPage{
+  width: auto;
+  height: 10rem;
+  aspect-ratio: 0.707;
+  border: 1px solid rgb(188, 188, 188);
+  border-radius: 6px;
+  transition: all linear 0.5s;
+}
+.pageConfigTitle{
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+  color: rgb(46, 46, 46);
+  margin-bottom: 0.5rem;
 }
