hover problem solved

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -31,7 +31,7 @@ iframe{
     margin: 0.5rem;
     border-radius: 6px;
     border: 1px solid rgb(210, 208, 206);
-    margin-left: 1.2rem;
+    margin-left: 1rem;
 
 }
 
@@ -353,7 +353,8 @@ input:focus{
     box-shadow: 1px 1px 5px 1px #00AEFF;
 }
 
-.docs-container:hover{
+/* .docs-container:hover{ */
+.hover-effect:hover{
     box-shadow: 1px 1px 5px 1px #00000040;
 }
 
@@ -676,6 +677,9 @@ input:focus{
   padding: 1rem;
   overflow: auto;
 
+  scrollbar-color: #28b3f4 #28b3f400;
+  scrollbar-width: thin;
+
 }
 
 /* ============ =============== DETAIl EDIT Section -- START -- ================= ================ */
@@ -701,6 +705,8 @@ input:focus{
 .detailEditSection {
   --sds-c-input-shadow-focus : none !important;
   --slds-c-textarea-shadow-focus : none !important;
+
+  padding-bottom: 0.5rem;
 }
 
 .editName {
