--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -194,6 +194,7 @@ iframe{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
 }
 .refresh{
     width:90%;
