--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -284,9 +284,11 @@ input{
     margin: 5%;
     display: flex;
     flex-direction: row;
+    height: 10%;
 }
 .small{
-    height:10%;
+    height:100%;
+    /* height:10%; */
     width:10%;
 }
 .docName{
