--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -284,7 +284,8 @@ input{
     margin: 5%;
     display: flex;
     flex-direction: row;
-    height: 10%;
+    /* height: 10%; */
+    height: 15%;
 }
 .small{
     height:100%;
