--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -116,6 +116,7 @@ iframe{
     margin-left:25%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .userData{
@@ -156,9 +157,10 @@ iframe{
     justify-content: flex-end;
 }
 .profileIcon{
-    height:100%;
+    height:80%;
     width:15%;
     margin-inline: 2%;
+    border-radius: 50%;
 }
 
 
